--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "hbs": "~3.1.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
